Fixed Header and Footer problem, but still working on Icons and Micropipets. Z-index not working, needed help.

--- a/challengeStyle.css
+++ b/challengeStyle.css
@@ -96,6 +96,7 @@
     background-position: center;
     background-image: url("general_img/step_bg.svg");
     position: absolute;
+    z-index: 10;
 }
 
 #currentState {
